Added "Calculate grades needed" button to MFOM3. Added automatic grades and weight for testing purposes.
Added Calculations.java - Central calculations file for all module grades and weights.

--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -8,6 +8,7 @@
     <string name="modules_termOne">Term 1</string>
     <string name="modules_termTwo">Term 2</string>
     <string name="add_assignment">Add assignment</string>
+    <string name="calculate_grades_needed">Calculate grades needed</string>
 
     <!-- MODULES MANAGEMENT SCIENCE YEAR 1-->
     <!-- TERM 1 -->
