--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -70,6 +70,11 @@
     <!-- Grades and Weights -->
     <string name="weight">Weight (%)</string>
     <string name="grade">Grade</string>
+    <string name="for_a_first">For a 1st: </string>
+    <string name="for_a_twoOne">For a 2.1:</string>
+    <string name="for_a_twoTwo">For a 2.2:</string>
+    <string name="for_a_third">For a 3rd: </string>
+    <string name="exam_grade_needed">Exam grade needed:</string>
 
 
 </resources>
