Added back button to asm, be1, cat, and MFOM1 modules. Changed top bar labels in AndroidManifest to the correct modules.

--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -64,7 +64,7 @@
     <string name="assignment_3">Assignment 3</string>
     <string name="assignment_4">Assignment 4</string>
     <string name="assignment_5">Assignment 5</string>
-    <string name="title_activity_man_sci_first_year">ManSciFirstYear</string>
+    <string name="title_activity_man_sci_first_year">Choose your module</string>
 
 
     <!-- Grades and Weights -->
