Added a dummy sort textfield at bottom of main screen that alphabetically sorts the 16 mansci modules. We want to add this in the fragment.

--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -20,7 +20,7 @@
     <string name="manSci_firstYear_bs">Behavioural Science</string>
     <string name="manSci_firstYear_da1">Data Analytics I</string>
     <string name="manSci_firstYear_be2">Business Economics II</string>
-    <string name="manSci_firstYear_MFOM2">MFOM I</string>
+    <string name="manSci_firstYear_MFOM2">MFOM II</string>
 
     <!-- MODULES MANAGEMENT SCIENCE YEAR 2 -->
     <!-- TERM 1 -->
