Added explanatory comments in all classes that require it. Cleaned up the Calculations class.

--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -9,6 +9,7 @@
     <string name="modules_termTwo">Term 2</string>
     <string name="add_assignment">Add assignment</string>
     <string name="calculate_grades_needed">Calculate grades needed</string>
+    <string name="main_button_viewModules">View modules</string>
 
     <!-- MODULES MANAGEMENT SCIENCE YEAR 1-->
     <!-- TERM 1 -->
